# AI-MIGOS

./: .gitignore  main.py  pyproject.toml  requirements.txt  template_example.txt
backend/: firebase-service-account-key.json  main.py
backend/agents/: .env  orchestrator_agent.py
backend/agents/booking_agent/: agent.json  agent.py  prompt.py
backend/agents/concierge_agent/: agent.json  agent.py  prompt.py
backend/agents/hidden_gems/: agent.json  agent.py  prompt.py
backend/agents/itinerary_planner/: agent.json  agent.py  prompt.py
backend/agents/realtime_adjuster/: agent.json  agent.py  prompt.py
backend/api/: authentication.py  comments.py  group_members.py  hidden_gems.py  payments.py  reservations.py  trips.py  votes.py  weather_alerts.py
backend/core/: firebase.py
frontend/: index.html  package.json  tailwind.config.js  vite.config.mjs
frontend/public/: manifest.json
frontend/src/: Routes.jsx
frontend/src/components/: ProtectedRoute.jsx
frontend/src/components/ui/: AIAssistantSidebar.jsx  Button.jsx  Header.jsx  LoadingSpinner.jsx  NotificationToast.jsx  ProgressIndicator.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/data/: mockTrips.js
frontend/src/firebase/: config.jsx
frontend/src/pages/: PaymentsPage.jsx  UserProfilePage.jsx
frontend/src/services/: authService.jsx  bookingService.jsx  commentService.jsx  groupMemberService.jsx  hiddenGemService.jsx  paymentService.jsx  reservationService.jsx  tripService.jsx  voteService.jsx  weatherAlertService.jsx
frontend/src/styles/: tailwind.css
(+41 files in other folders)
