[project]
name = "ai-migos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "firebase-admin>=6.2.0",
    "google-cloud-firestore>=2.21.0",
    "google-cloud-storage>=3.3.1",
    "google-api-python-client>=2.181.0",
    "google-auth>=2.40.3",
    "python-dotenv>=1.1.1",
    "pydantic>=2.5.0",
    "bcrypt>=4.3.0",
    "passlib>=1.7.4",
    "python-jose>=3.3.0",
    "requests>=2.32.5",
    "httpx>=0.28.1",
    "protobuf>=6.32.0",
    "anyio>=4.10.0",
    "cachetools>=5.5.2",
    "colorama>=0.4.6",
    "dnspython>=2.7.0",
    "email-validator>=2.1.0",
    "grpcio>=1.74.0",
    "pyyaml>=6.0.2",
    "websockets>=15.0.1",
    "stripe>=12.5.1",
]
